# voice-control-smarthouse

./: README.md  notebook02697a09d4.ipynb
kws_esp32s3/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
kws_esp32s3/main/: CMakeLists.txt  audio_capture.cc  audio_capture.h  device_control.cc  device_control.h  idf_component.yml  kws_inference.cc  kws_inference.h  main.cc  mfcc_processor.cc  mfcc_processor.h
kws_esp32s3/main/model/: kws_model_data.cc  kws_model_data.h
